# fast-context-rust

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: build-release.sh  smoke-test.sh
src/: config.rs  core.rs  error.rs  executor.rs  extract_key.rs  lib.rs  main.rs  mcp.rs  project_path.rs  protobuf.rs  scorer.rs
tests/: core_tests.rs  executor_tests.rs  extract_key_tests.rs  mcp_tests.rs  protobuf_tests.rs  scorer_tests.rs
