[package]
name = "fast-context-rust"
version = "1.4.0"
edition = "2024"
description = "Pure binary Rust implementation of the Fast Context MCP server"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
which = "8"
walkdir = "2"
globset = "0.4"
regex = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
flate2 = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.40", features = ["bundled"] }
once_cell = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[profile.bench]
codegen-units = 16
lto = "thin"
